Mostly fix item tag selector position on Safari
Fixes #6091

--- a/src/app/item-popup/ItemTagSelector.m.scss
+++ b/src/app/item-popup/ItemTagSelector.m.scss
@@ -1,4 +1,5 @@
 .itemTagSelector {
+  position: relative;
   button {
     min-width: 10em;
   }
